# whuRobot

./: .gitignore  frames.gv  whuRobot.launch
src/control/: CMakeLists.txt  package.xml
src/control/include/control/: serial.h
src/control/src/: MainControl.cpp  serial_node.cpp  serial_test.cpp
src/navigation/planning/: CMakeLists.txt  package.xml
src/navigation/planning/config/: base_local_planner_params.yaml  common_costmap_params.yaml
src/navigation/planning/launch/: amcl_infantry.launch  amcl_omni.launch  move_base.launch
src/tf_robot/: CMakeLists.txt  package.xml
src/tf_robot/src/: tf_robot.cpp
src/vision/armor_detect/param/: param_config.xml
src/vision/armor_detect/src/: ArmorDetector.cpp  ImageConsProd.cpp  vision_node.cpp
src/whurobot_msgs/msg/: GameInfo.msg
